# bevy-cursor-kit

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: audit.yml  cd.yml  ci.yml
assets/: Master Sword license.txt  Master Sword-Fairy.ani  kenney_crosshairPack.cur.ron
examples/: ani.rs  cur.rs  cur_ron_asset.rs
examples/helpers/: flip.rs  ui.rs
src/: asset_image.rs  builder.rs  hotspot.rs  lib.rs
src/ani/: animation.rs  asset.rs  decoder.rs  mod.rs  serde_asset.rs
src/cur/: asset.rs  decoder.rs  mod.rs  serde_asset.rs
src/ico/: bmpdepth.rs  icondir.rs  image.rs  mod.rs  restype.rs
