[package]
name = "bevy_cursor_kit"
version = "0.4.3"
edition = "2021"
description = "A Bevy plugin for working with cursors."
repository = "https://github.com/mgi388/bevy-cursor-kit"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde", "bitflags/serde", "ico/serde"]
serde_asset = ["serde"]
serde_json_asset = ["dep:serde_json", "serde_asset"]
serde_ron_asset = ["dep:ron", "serde_asset"]
serde_toml_asset = ["dep:toml", "serde_asset"]

[dependencies]
bevy_app = "0.16.0-rc"
bevy_ecs = "0.16.0-rc"
bevy_asset = "0.16.0-rc"
bevy_image = "0.16.0-rc"
bevy_math = "0.16.0-rc"
bevy_reflect = "0.16.0-rc"
bevy_winit = { version = "0.16.0-rc", features = ["custom_cursor"] }
bitflags = { version = "2.9", default-features = false }
byteorder = "1.5"
ico = "0.4"
image = "0.25"
riff = "2"
ron = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }
serde_json = { version = "1", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }

[dev-dependencies]
bevy = { version = "0.16.0-rc", default-features = false, features = [
    "bevy_log",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "png",
    "x11",
] }
ron = "0.8"

[lints.clippy]
type_complexity = "allow"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "cur_ron_asset"
path = "examples/cur_ron_asset.rs"
doc-scrape-examples = true
required-features = ["serde_ron_asset"]
