[package]
name = "bevy_cursor_kit"
version = "0.7.0"
edition = "2021"
description = "A Bevy plugin for working with cursors."
repository = "https://github.com/mgi388/bevy-cursor-kit"
license = "MIT OR Apache-2.0"

[features]
default = []
bevy_spritesheet_animation = ["dep:bevy_spritesheet_animation"]
serde = ["dep:serde", "bitflags/serde", "ico/serde"]
serde_asset = ["serde"]
serde_json_asset = ["dep:serde_json", "serde_asset"]
serde_ron_asset = ["dep:ron", "serde_asset"]
serde_toml_asset = ["dep:toml", "serde_asset"]

[dependencies]
bevy_app = "0.17"
bevy_ecs = "0.18"
bevy_asset = "0.17"
bevy_image = "0.17"
bevy_math = "0.17"
bevy_reflect = "0.17"
bevy_spritesheet_animation = { version = "5", optional = true, default-features = false }
bevy_window = { version = "0.17", features = ["custom_cursor"] }
bitflags = { version = "2.10", default-features = false }
byteorder = "1.5"
ico = "0.5"
image = "0.25"
riff = "2"
ron = { version = "0.12", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }
serde_json = { version = "1", optional = true }
thiserror = "2"
toml = { version = "0.9", optional = true }

[dev-dependencies]
bevy = { version = "0.17", default-features = true, features = [
    "custom_cursor",
] }
ron = "0.12"

[lints.clippy]
type_complexity = "allow"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "cur_ron_asset"
path = "examples/cur_ron_asset.rs"
doc-scrape-examples = true
required-features = ["serde_ron_asset"]
